# shry_gitcha-action

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENCE  README.md  action.yml  pyproject.toml
.github/workflows/: main.yml  release.yml
gitcha/: __init__.py  main.py
gitcha/core/: generator.py  schemas.py  utils.py
tests/: conftest.py  test_gitcha.py
